# inline-python

./: .travis.yml  Cargo.toml  LICENSE  README.md  travis.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
ct-python/: Cargo.toml
ct-python/examples/: example.rs
ct-python/src/: lib.rs
examples/: Cargo.toml  context.rs  matplotlib.rs  octave.rs  rust-fn.rs
inline-python/: Cargo.toml
inline-python-example/: Cargo.toml
inline-python-macros/: Cargo.toml
inline-python-macros/src/: embed_python.rs  lib.rs  meta.rs
inline-python/src/: context.rs  lib.rs  run.rs
inline-python/tests/: python_ex.rs  shared_context.rs
macros/: Cargo.toml
macros/examples/: example.rs
macros/src/: embed_python.rs  error.rs  lib.rs  run.rs
src/: context.rs  error.rs  flush.rs  lib.rs  run.rs
tests/: shared_context.rs
