[package]
name = "inline-python"
version = "0.7.0"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python"
keywords = ["python", "inline", "embed", "macro"]
autoexamples = false

[dependencies]
inline-python-macros = { version = "=0.7.0", path = "./macros" }
pyo3 = { version = "0.14.0", default-features = false, features = ["auto-initialize"] }

[features]
pyo3-macros = ["pyo3/macros"]
pyo3-multiple-pymethods = ["pyo3/multiple-pymethods"]
pyo3-extension-module = ["pyo3/extension-module"]
pyo3-abi3 = ["pyo3/abi3"]
pyo3-abi3-py36 = ["pyo3/abi3-py36"]
pyo3-abi3-py37 = ["pyo3/abi3-py37"]
pyo3-abi3-py38 = ["pyo3/abi3-py38"]
pyo3-abi3-py39 = ["pyo3/abi3-py39"]
pyo3-auto-initialize = ["pyo3/auto-initialize"]
pyo3-nightly = ["pyo3/nightly"]

[workspace]
members = ["examples", "ct-python"]
