[package]
name = "inline-python"
version = "0.7.1"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python"
keywords = ["python", "inline", "embed", "macro"]
autoexamples = false

[dependencies]
inline-python-macros = { version = "=0.7.1", path = "./macros" }
pyo3 = { version = "0.14.0", default-features = false, features = ["auto-initialize"] }

[workspace]
members = ["examples", "ct-python"]
