[package]
name = "ct-python"
version = "0.5.4"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
description = "Execute Python code at compile time to generate Rust code"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python/tree/master/ct-python"
keywords = ["python", "macro", "generate", "compile-time"]

[dependencies]
inline-python-macros = { version = "=0.9.0", path = "../macros" }
