[package]
name = "inline-python-macros"
version = "0.3.2"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Macros for the inline-python crate"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/dronesforwork/inline-python"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }
pyo3 = "0.8.1"
