[package]
name = "inline-python-macros"
version = "0.4.1"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Macros for the inline-python crate"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }
pyo3 = "0.9.0"
