[package]
name = "inline-python"
version = "0.1.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/dronesforwork/inline-python"
keywords = ["python", "inline", "embed", "macro"]

[dependencies]
inline-python-macros = { version = "0.1", path = "../inline-python-macros" }
pyo3 = "0.6"
