[package]
name = "inline-python"
version = "0.3.2"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python"
keywords = ["python", "inline", "embed", "macro"]

[dependencies]
inline-python-macros = { version = "=0.3.2", path = "../inline-python-macros" }
pyo3 = "0.8.1"
