[package]
name = "inline-python-macros"
version = "0.5.3"
authors = [
	"Mara Bos <m-ou.se@m-ou.se>",
	"Maarten de Vries <maarten@de-vri.es>",
]
description = "Macros for the inline-python crate"
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/inline-python"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
pyo3 = { version = "0.12.3", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2.71"
